test_data/data_validation_tests_data/invalid_currency_codes_test_data/bank_export_missing_currency_test_new.xlsx
version https://git-lfs.github.com/spec/v1
oid sha256:32824865a0790f216091362422d1d672c56d8557dd8aacbbb176d62f6563778d
size 5488
